# BIP39

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/crypto/: CMakeLists.txt  strencodings.cpp
src/crypto/bip39/: BIP39.h
